# soniox_transcriber

./: .dockerignore  .env.example  DEPLOYMENT.md  DEPLOYMENT_VPS.md  Dockerfile  QUICKSTART.md  QUICKSTART_VPS.md  README.md  VAPI_INTEGRATION.md  VAPI_QUICKSTART.md  build-and-push.sh  create_vapi_assistant.py  docker-compose-service.yml  docker-compose.yml  pyproject.toml  test_vapi_call.py  test_vapi_web.html
.claude/: settings.local.json
src/soniox_transcriber/: __init__.py  __main__.py  dictation.py  transcriber.py  vapi_server.py
vapi_server_standalone/: .dockerignore  .env.example  Dockerfile  README.md  deploy.sh  pyproject.toml
vapi_server_standalone/src/soniox_vapi/: __init__.py  server.py
