[project]
name = "soniox-vapi-server"
version = "0.1.0"
description = "Soniox custom transcriber server for Vapi"
requires-python = ">=3.8"

# Only the minimal dependencies needed for the Vapi server
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
soniox-vapi-server = "soniox_vapi.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soniox_vapi"]
